--- a/examples/rpl-border-router/Makefile
+++ b/examples/rpl-border-router/Makefile
@@ -5,6 +5,8 @@ CONTIKI = ../..
 # The BR is either native or embedded, and in the latter case must support SLIP
 PLATFORMS_EXCLUDE = nrf52dk z1
 
+MAKE_MAC = MAKE_MAC_TSCH
+
 # Include RPL BR module
 MODULES += os/services/rpl-border-router
 # Include webserver module
@@ -12,5 +14,9 @@ MODULES_REL += webserver
 # Include optional target-specific module
 include $(CONTIKI)/Makefile.identify-target
 MODULES_REL += $(TARGET)
+
+TARGET = cc26x0-cc13x0
+BOARD = launchpad/cc1350
+PORT = /dev/ttyACM0
 
 include $(CONTIKI)/Makefile.include
