Connect-router now utilizes PORT as input

--- a/os/services/rpl-border-router/embedded/Makefile.embedded
+++ b/os/services/rpl-border-router/embedded/Makefile.embedded
@@ -1,7 +1,11 @@
 PREFIX ?= fd00::1/64
 
 connect-router: $(TUNSLIP6)
+ifeq ($(PORT),)
 	sudo $(TUNSLIP6) $(PREFIX)
+else
+	sudo $(TUNSLIP6) -s $(PORT) $(PREFIX)
+endif
 
 connect-router-cooja: $(TUNSLIP6)
 	sudo $(TUNSLIP6) -a 127.0.0.1 $(PREFIX)
